xee-xpath-compiler/tests/snapshots/xpath__sequence_predicate_sequence_empty.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[()]\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
