xee-xpath-compiler/tests/snapshots/xpath__simple_map_multiple_steps.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2) ! (. + 1) ! (. + 2)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        4,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        5,
                    ),
                ),
            ],
        ),
    },
)
