xee-xpath-compiler/tests/snapshots/xpath__simple_map_sequence.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2) ! (., 0)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        0,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        0,
                    ),
                ),
            ],
        ),
    },
)
