xee-xpath-compiler/tests/snapshots/xpath__simple_string_concat.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'hello' || 'world'\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "helloworld",
                ),
            ),
        ),
    },
)
