xee-xpath-compiler/tests/snapshots/xpath__some_quantifier_empty_sequence.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"some $x in () satisfies $x eq 5\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
