xee-xpath-compiler/tests/snapshots/xpath__static_function_call_nested.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(r#\"fn:string-join((\"A\"),xs:string(\"A\"))\"#)"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "A",
                ),
            ),
        ),
    },
)
