xee-xpath-compiler/tests/snapshots/xpath__string_compare_eq_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'hello' eq 'hello'\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
