xee-xpath-compiler/tests/snapshots/xpath__value_ne_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 ne 1\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
