xee-xpath-compiler/tests/snapshots/xpath__xs_double_nan.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"xs:double('NaN')\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Double(
                    OrderedFloat(
                        NaN,
                    ),
                ),
            ),
        ),
    },
)
