xee-xpath-compiler/tests/snapshots/xpath__xs_double_nan_ne_to_itself.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"xs:double('NaN') ne xs:double('NaN')\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
