xee-xpath-compiler/tests/snapshots/xpath__xs_qname.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"xs:QName('xs:bar')\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                QName(
                    OwnedName {
                        local_name_str: "bar",
                        namespace_str: "http://www.w3.org/2001/XMLSchema",
                        prefix_str: "xs",
                    },
                ),
            ),
        ),
    },
)
